--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           referrer: site.referrer,
           referrerPolicy: "origin-when-cross-origin",
           mode:"cors",
-          credentials: "include",
+          credentials: "omit",
           cache: "no-store",
         }).then(response=>response.text()).then(result=>{
           document.querySelector('#comments').append(script);
