--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         origin: `${window.location.hash}`,
         referrer: `${window.location.pathname}`
       }
-      const importantBag={id:"git",site:window.location};
+      const importantBag={id:"nasoberu",site:window.location};
       // const id='nasoberu';// important!!!
       const script =document.createElement('script');
       const url ='https://comments.qucu.ru/allow-cors';
