--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           origin:site.origin,
           method: "GET",
           referrer: site.referrer,
-          referrerPolicy: "origin-when-cross-origin",
+        //   referrerPolicy: "origin-when-cross-origin",
           mode:"cors",
           credentials: "omit",
           cache: "no-store",
