--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
+    <link rel="shortcut icon" href="/img/chat.png" type="image/x-icon">
+  </head>
 <body>
 <main>
     <article>
@@ -32,7 +33,7 @@
           origin:site.origin,
           method: "GET",
           referrer: site.referrer,
-          referrerPolicy: "origin-when-cross-origin",
+          referrerPolicy: "origin",
           mode:"cors",
           credentials: "omit",
           cache: "no-store",
