--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="shortcut icon" href="/img/chat.png" type="image/x-icon">
+    <title>Chat and comment system</title>
+    <link rel="shortcut icon" href="https://comments.qucu.ru/img/chat.png" type="image/x-icon">
   </head>
 <body>
 <main>
