--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat and comment system</title>
-    <link rel="shortcut icon" href="https://comments.qucu.ru/public/img/chat.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://comments.qucu.ru/img/chat.png" type="image/x-icon">
   </head>
 <body>
 <main>
