--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           origin:site.origin,
           method: "GET",
           referrer: site.referrer,
-          referrerPolicy: "origin",
+          referrerPolicy: "no-referrer-when-downgrade",
           mode:"cors",
           credentials: "omit",
           cache: "no-store",
